# psxport

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  generated  run.sh
0/: vk_00595.ppm  vk_00600.ppm  vk_00605.ppm  vk_00610.ppm  vk_00615.ppm
assets/rml/: menu.rcss  menu.rml
cmake/: psxport.cmake  tomba2_port.cmake
common/: CMakeLists.txt  env.cpp  env.h
docs/: abcompare-design.md  abi-extract.md  behavior-map.md  bug-hunt-workflow.md  campaign-checklist.md  code-map.md  config.md  diff-driver.md  driving-the-game.md  engine-ownership-audit.md  engine_re.md  faithful-execution.md  fleet-workflow.md  fps60-rework.md  game-deglobalize-plan.md  gfx-debug.md  hut-render-bug.md  journal.md  known-bugs.md  narration-port.md  native-port-plan.md  native-render-2d-panel.md  native-render-2d-tilegrid.md  native-render-rebuild.md  oracle.md  parity-map.md  pc-game-architecture.md  pc-subsystem-rebuild.md  port-framework.md  port-map.md  port-progress.md  porting-a-new-psx-game.md  project-map.md  raylib-render-port.md  recomp_port_plan.md  render-arch.md  render-backend-port.md  scene-checklist.md  tomba2-clips.md  tomba2-fmv-skip.md  (+9 more)
docs/deferred/: actor_sm_reward-refactor.patch
docs/findings/: INDEX.md  ai.md  animation.md  audio.md  camera.md  fmv-cd.md  render.md  sbs.md  scene.md  tooling.md  ui.md
docs/kanban/: board.md
engine/: actor_sm_24448.cpp  animation.h  asset.cpp  beh_actor_move_sm.cpp  beh_anim_trigger_gates.cpp  beh_camera_target_follow.cpp  beh_id_routed_dispatch.cpp  beh_pad_child_linker.cpp  beh_pure_substate_dispatch.cpp  beh_quad_record_table_seed.cpp  beh_scatter_ramp_machine.cpp  beh_sibling_angle_track.cpp  beh_single_child_cull.cpp  beh_two_child_steer.cpp  beh_typed_table_seed_gate.cpp  beh_variant_overlay_lifecycle.cpp  beh_visibility_gate_dispatch.cpp  bg_scene_transition_sm.cpp  collision.h  cull.cpp  engine_bav.cpp  engine_camera.cpp  engine_demo.cpp  engine_init.cpp  engine_level.cpp  engine_math.cpp  engine_player.cpp  engine_render.cpp  engine_render.h  engine_render_walk.cpp  engine_stage.cpp  engine_submit.c  engine_submit.cpp  engine_tomba2.c  engine_tomba2.cpp  entity.cpp  entity.h  entity_spawn.cpp  entity_spawn.h  fps60.c  (+79 more)
engine/audio/: music_list.c  music_list.h  native_audio.c  native_music.h
game/: game_tomba2.cpp
game/ai/: actor_melee_engage.cpp  actor_melee_engage.h  actor_zoned_attacker.cpp  actor_zoned_attacker.h  area_seaside_perframe.cpp  attack_orbit_substate.cpp  attack_orbit_substate.h  beh_a06_multi_actor.cpp  beh_a06_script_fades.cpp  beh_a06_scripted_actor.cpp  beh_a08_scene_actor.cpp  beh_actor_move_sm.cpp  beh_actor_tomba_proximity_combat.cpp  beh_actor_tomba_proximity_combat.h  beh_anim_trigger_gates.cpp  beh_area_event_dispatch.cpp  beh_area_threshold_ptr_swap.cpp  beh_area_transition_machine.cpp  beh_box_rearm_sub.cpp  beh_box_seed_phase_gate.cpp  beh_camera_target_follow.cpp  beh_child_trig_motion.cpp  (+55 more)
game/ui/: font.h  (+15 more)
replays/: README.md
runtime/: Makefile  hle_bios.h  hle_irq.cpp  hle_iso.cpp  hle_kernel.cpp  hle_syscalls.cpp  main.cpp  psxport_hooks.cpp  psxport_hooks.h  wide60.cpp  wide60.h
scripts/: build-openbios.sh  play-tomba2-hle.sh  play-tomba2.sh  run-tomba2.sh  test-wide60.sh
tests/: test_coro.cpp  test_leaf.c
tools/: CMakeLists.txt  abcompare.py  abi_extract.py  behavior.py  bgm.py  bugs.py  build_port.sh  build_raylib.sh  build_rmlui.sh  build_xa_wavdump.sh  cellcmp.py  chd_dump_cdda.c  clean.sh  codemap.py  codemap_overrides.tsv  dbgclient.py  decomp.sh  disas.py  disasm.py  disasm_overlay.py  discdump.cpp  discscan.c  drive.py  dualcore.py  dump_all_seq.cpp  ensure_recomp.py  entity_walk.py  export_model.py  extract_pasted_shots.py  findings.py  frame_audit.py  frames.py  gen_gpu_shaders.sh  gen_vk_shaders.sh  ghidra_decomp.py  ghidra_overlay.py  ghidra_xrefs.py  golden_drive.repl  gpudump_stats.py  interp_dump.py  (+39 more)
tools/audio_differ/: README.md  compare.py
tools/fmv_compare/: build.sh  fmv_compare.c
tools/gpu_differ/: README.md  build.sh  diff.py  replay_ours.c
tools/recomp/: build.sh  decode.py  emit.py  psexe.py  test_decode.py  test_emit.py
tools/smoke/: psxport_smoke.cpp
(+462 files in other folders)
